
- NEW: ocat --load-ghash can load revgeo db
- NEW: ocat --dump-ghash dumps content of revgeo db
- FIX: main index now shows users/devices already in storage

2015-09-14 version 0.2.8
- FIX: undo ocat -v change

2015-09-14 version 0.2.7

- FIX: ocat -v correctly displays configured JSON_INDENT
- FIX: spec file now builds packages on OBS

2015-09-14 version 0.2.6

- FIX: source of doc root renamed to docroot

2015-09-14 version 0.2.5

- FIX: renamed wdocs to htdocs
- FIX: updated spec file and renamed defaults
- FIX: log with which clientID user is connecting to Hosted
	to aid in trouble-shooting

2015-09-13 version 0.2.4

- FIX: incorrect install of wdocs/ (thanks to @rk295)
- FIX: use correct hostname for --hosted mode
- FIX: live map had ugly HTML on hover-over point

2015-09-11 version 0.2.3

- NEW: --hosted mode for recorder

2015-09-11 version 0.2.2

- first public release