@@ -1,4 +1,6 @@
 
+- NEW: kill has been surfaced into the API (disabled by compile flag by default)
+- FIX: kill now also deletes LAST file and its parent directories if empty
 - NEW: ocat --load-ghash can load revgeo db
 - NEW: ocat --dump-ghash dumps content of revgeo db
 - FIX: main index now shows users/devices already in storage
